--- a/PartyLifeManager/Web.config
+++ b/PartyLifeManager/Web.config
@@ -1,10 +1,21 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <connectionStrings>
+    <remove name="LocalSqlServer" />
+    <add name="LocalSqlServer" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\aspnetdb.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <system.web>
+    
+    <roleManager enabled="true" />
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
